# VfsBot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  DEPLOY.md  DEPLOY_CI.md  Dockerfile  HANDOFF.md  README.md  dev.ps1  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: Dockerfile  README.md  go.mod  go.sum
api/data/: visabooking.db-shm  visabooking.db-wal
backend/: Dockerfile.worker  WORKER_API.md  inspect_page.py  run_check.py  run_worker.py  worker-entrypoint.sh  worker_app.py
backend/captcha/: __init__.py  solver.py
backend/core/: booking_task.py  config.py  logger.py  validators.py
backend/scheduler/: checker.py
backend/storage/: database.py  models.py
backend/tests/: __init__.py  test_client.py  test_cloudflare_captcha.py  test_session_manager.py  test_validators.py
backend/vfs_site/: __init__.py  availability.py  booking_flow.py  browser.py  client.py  material.py  selectors.py  session.py
backend/webapp/: __init__.py  auth.py  db.py  main.py
bot/: __init__.py  dispatcher.py  main.py
bot/handlers/: __init__.py  add.py  cancel.py  edit.py
bot/telegram_bot/: __init__.py  dispatcher.py  keyboards.py  states.py
browser/: __init__.py  captcha_solver.py  client.py  manager.py  selectors.py
frontend/: index.html  styles.css
frontend/js/: api.js  app.js  state.js  (+1 more)
scheduler/: __init__.py  checker.py
storage/: __init__.py  database.py
tests/: conftest.py  test_client.py  test_validators.py
utils/: __init__.py  config.py  exceptions.py  logger.py  validators.py
(+24 files in other folders)
